feat(core): add a entity graph service and endpoint