@@ -37,195 +37,134 @@ import com.decathlon.idp_core.domain.service.property.PropertyValidationService;
 @DisplayName("EntityValidationService Tests")
 class EntityValidationServiceTest {
 
-    @Mock
-    private EntityRepositoryPort entityRepository;
+  @Mock
+  private EntityRepositoryPort entityRepository;
 
+  @Mock
+  private PropertyValidationService propertyValidationService;
 
-    @Mock
-    private PropertyValidationService propertyValidationService;
+  @InjectMocks
+  private EntityValidationService entityValidationService;
 
-    @InjectMocks
-    private EntityValidationService entityValidationService;
+  @Test
+  @DisplayName("Should throw when entity with same identifier already exists")
+  void shouldThrowWhenEntityAlreadyExists() {
+    var template = new EntityTemplate(UUID.randomUUID(), "web-service", "Web Service", "desc",
+        Collections.emptyList(), List.of());
+    var entity = entity("web-service", "catalog-api", "Catalog API", List.of(), List.of());
+    when(entityRepository.findByTemplateIdentifierAndIdentifier("web-service", "catalog-api"))
+        .thenReturn(Optional.of(entity));
 
-    @Test
-    @DisplayName("Should throw when entity with same identifier already exists")
-    void shouldThrowWhenEntityAlreadyExists() {
-        var template = new EntityTemplate(
-                UUID.randomUUID(),
-                "web-service",
-                "Web Service",
-                "desc",
-                Collections.emptyList(),
-                List.of());
-        var entity = entity("web-service", "catalog-api", "Catalog API", List.of(), List.of());
-        when(entityRepository.findByTemplateIdentifierAndIdentifier("web-service", "catalog-api"))
-                .thenReturn(Optional.of(entity));
+    assertThrows(EntityAlreadyExistsException.class,
+        () -> entityValidationService.validateForCreation(entity, template));
+  }
 
-        assertThrows(EntityAlreadyExistsException.class, () -> entityValidationService.validateForCreation(entity, template));
-    }
+  @Test
+  @DisplayName("Should not query repository when identifier is null")
+  void shouldNotQueryRepositoryWhenIdentifierIsNull() {
+    var template = new EntityTemplate(UUID.randomUUID(), "web-service", "Web Service", "desc",
+        Collections.emptyList(), List.of());
 
-    @Test
-    @DisplayName("Should not query repository when identifier is null")
-    void shouldNotQueryRepositoryWhenIdentifierIsNull() {
-        var template = new EntityTemplate(
-                UUID.randomUUID(),
-                "web-service",
-                "Web Service",
-                "desc",
-                Collections.emptyList(),
-                List.of());
+    var entity = entity("web-service", null, "Catalog API", List.of(), List.of());
 
-        var entity = entity("web-service", null, "Catalog API", List.of(), List.of());
+    assertDoesNotThrow(() -> entityValidationService.validateForCreation(entity, template));
 
-        assertDoesNotThrow(() -> entityValidationService.validateForCreation(entity, template));
+    verify(entityRepository, never()).findByTemplateIdentifierAndIdentifier(
+        org.mockito.ArgumentMatchers.any(), org.mockito.ArgumentMatchers.any());
+  }
 
-        verify(entityRepository, never()).findByTemplateIdentifierAndIdentifier(org.mockito.ArgumentMatchers.any(), org.mockito.ArgumentMatchers.any());
-    }
+  @Test
+  @DisplayName("Should aggregate property requirements and rule violations")
+  void shouldAggregateAllViolationsDuringValidateForCreation() {
+    var portDefinition = new PropertyDefinition(UUID.randomUUID(), "port", "Port",
+        PropertyType.NUMBER, true,
+        new PropertyRules(null, null, null, null, null, null, 65535, 1024));
 
+    var requiredDefinition = new PropertyDefinition(UUID.randomUUID(), "ownerEmail", "Owner email",
+        PropertyType.STRING, true, null);
 
-    @Test
-    @DisplayName("Should aggregate property requirements and rule violations")
-    void shouldAggregateAllViolationsDuringValidateForCreation() {
-        var portDefinition = new PropertyDefinition(
-                UUID.randomUUID(),
-                "port",
-                "Port",
-                PropertyType.NUMBER,
-                true,
-                new PropertyRules(null, null, null, null, null, null, 65535, 1024));
+    var template = new EntityTemplate(UUID.randomUUID(), "web-service", "Web Service", "desc",
+        List.of(requiredDefinition, portDefinition), List.of());
 
-        var requiredDefinition = new PropertyDefinition(
-                UUID.randomUUID(),
-                "ownerEmail",
-                "Owner email",
-                PropertyType.STRING,
-                true,
-                null);
+    var entity = entity("web-service", " ", // Blank identifier (handled by Jakarta, not this
+                                            // service)
+        " ", // Blank name (handled by Jakarta, not this service)
+        List.of(new Property(UUID.randomUUID(), " ", " "),
+            new Property(UUID.randomUUID(), "port", "80")),
+        List.of()); // No relations
 
-        var template = new EntityTemplate(
-                UUID.randomUUID(),
-                "web-service",
-                "Web Service",
-                "desc",
-                List.of(requiredDefinition, portDefinition),
-                List.of());
+    when(propertyValidationService.validatePropertyValue(portDefinition, "80"))
+        .thenReturn(List.of("Property 'port' value must be greater than or equal to 1024"));
 
-        var entity = entity(
-                "web-service",
-                " ", // Blank identifier (handled by Jakarta, not this service)
-                " ", // Blank name (handled by Jakarta, not this service)
-                List.of(new Property(UUID.randomUUID(), " ", " "), new Property(UUID.randomUUID(), "port", "80")),
-                List.of()); // No relations
+    var exception = assertThrows(EntityValidationException.class,
+        () -> entityValidationService.validateForCreation(entity, template));
 
-        when(propertyValidationService.validatePropertyValue(portDefinition, "80"))
-                .thenReturn(List.of("Property 'port' value must be greater than or equal to 1024"));
+    // Expecting exactly 2 errors: the missing required property, and the invalid
+    // port value.
+    assertEquals(2, exception.getViolations().size());
+    assertEquals(PROPERTY_REQUIRED_MISSING.formatted("ownerEmail", "web-service"),
+        exception.getViolations().get(0));
+    assertEquals("Property 'port' value must be greater than or equal to 1024",
+        exception.getViolations().get(1));
 
-        var exception = assertThrows(EntityValidationException.class, () -> entityValidationService.validateForCreation(entity, template));
+    verify(propertyValidationService).validatePropertyValue(portDefinition, "80");
+  }
 
-        // Expecting exactly 2 errors: the missing required property, and the invalid port value.
-        assertEquals(2, exception.getViolations().size());
-        assertEquals(PROPERTY_REQUIRED_MISSING.formatted("ownerEmail", "web-service"), exception.getViolations().get(0));
-        assertEquals("Property 'port' value must be greater than or equal to 1024", exception.getViolations().get(1));
+  @Test
+  @DisplayName("Should validate entity successfully when no violations")
+  void shouldValidateForCreationSuccessfullyWhenNoViolations() {
+    var versionDefinition = new PropertyDefinition(UUID.randomUUID(), "version", "Version",
+        PropertyType.STRING, false, null);
 
-        verify(propertyValidationService).validatePropertyValue(portDefinition, "80");
-    }
+    var template = new EntityTemplate(UUID.randomUUID(), "web-service", "Web Service", "desc",
+        List.of(versionDefinition), List.of());
 
-    @Test
-    @DisplayName("Should validate entity successfully when no violations")
-    void shouldValidateForCreationSuccessfullyWhenNoViolations() {
-        var versionDefinition = new PropertyDefinition(
-                UUID.randomUUID(),
-                "version",
-                "Version",
-                PropertyType.STRING,
-                false,
-                null);
+    var entity = entity("web-service", "catalog-api", "Catalog API",
+        List.of(new Property(UUID.randomUUID(), "version", "1.0.0")), null);
 
-        var template = new EntityTemplate(
-                UUID.randomUUID(),
-                "web-service",
-                "Web Service",
-                "desc",
-                List.of(versionDefinition),
-                List.of());
+    when(propertyValidationService.validatePropertyValue(versionDefinition, "1.0.0"))
+        .thenReturn(List.of());
 
-        var entity = entity(
-                "web-service",
-                "catalog-api",
-                "Catalog API",
-                List.of(new Property(UUID.randomUUID(), "version", "1.0.0")),
-                null);
+    assertDoesNotThrow(() -> entityValidationService.validateForCreation(entity, template));
+    verify(propertyValidationService).validatePropertyValue(versionDefinition, "1.0.0");
+  }
 
+  @Test
+  @DisplayName("Should skip property rule validation for missing optional property")
+  void shouldSkipPropertyRuleValidationWhenOptionalPropertyMissing() {
+    var optionalDefinition = new PropertyDefinition(UUID.randomUUID(), "version", "Version",
+        PropertyType.STRING, false, null);
 
-        when(propertyValidationService.validatePropertyValue(versionDefinition, "1.0.0")).thenReturn(List.of());
+    var template = new EntityTemplate(UUID.randomUUID(), "web-service", "Web Service", "desc",
+        List.of(optionalDefinition), List.of());
 
-        assertDoesNotThrow(() -> entityValidationService.validateForCreation(entity, template));
-        verify(propertyValidationService).validatePropertyValue(versionDefinition, "1.0.0");
-    }
+    var entity = entity("web-service", "catalog-api", "Catalog API", List.of(), List.of());
 
-    @Test
-    @DisplayName("Should skip property rule validation for missing optional property")
-    void shouldSkipPropertyRuleValidationWhenOptionalPropertyMissing() {
-        var optionalDefinition = new PropertyDefinition(
-                UUID.randomUUID(),
-                "version",
-                "Version",
-                PropertyType.STRING,
-                false,
-                null);
+    assertDoesNotThrow(() -> entityValidationService.validateForCreation(entity, template));
+    verifyNoInteractions(propertyValidationService);
+  }
 
-        var template = new EntityTemplate(
-                UUID.randomUUID(),
-                "web-service",
-                "Web Service",
-                "desc",
-                List.of(optionalDefinition),
-                List.of());
+  @Test
+  @DisplayName("Should validate property of type STRING with a numeric string value '1234'")
+  void shouldValidateStringPropertyWithNumericStringValue() {
+    var stringDefinition = new PropertyDefinition(UUID.randomUUID(), "versionCode",
+        "Version Code as String", PropertyType.STRING, false, null);
 
-        var entity = entity("web-service", "catalog-api", "Catalog API", List.of(), List.of());
+    var template = new EntityTemplate(UUID.randomUUID(), "web-service", "Web Service", "desc",
+        List.of(stringDefinition), List.of());
 
-        assertDoesNotThrow(() -> entityValidationService.validateForCreation(entity, template));
-        verifyNoInteractions(propertyValidationService);
-    }
+    var entity = entity("web-service", "catalog-api", "Catalog API",
+        List.of(new Property(UUID.randomUUID(), "versionCode", "1234")), null);
+    when(propertyValidationService.validatePropertyValue(stringDefinition, "1234"))
+        .thenReturn(List.of());
 
-    @Test
-    @DisplayName("Should validate property of type STRING with a numeric string value '1234'")
-    void shouldValidateStringPropertyWithNumericStringValue() {
-        var stringDefinition = new PropertyDefinition(
-                UUID.randomUUID(),
-                "versionCode",
-                "Version Code as String",
-                PropertyType.STRING,
-                false,
-                null
-        );
+    assertDoesNotThrow(() -> entityValidationService.validateForCreation(entity, template));
+    verify(propertyValidationService).validatePropertyValue(stringDefinition, "1234");
+  }
 
-        var template = new EntityTemplate(
-                UUID.randomUUID(),
-                "web-service",
-                "Web Service",
-                "desc",
-                List.of(stringDefinition),
-                List.of());
-
-        var entity = entity(
-                "web-service",
-                "catalog-api",
-                "Catalog API",
-                List.of(new Property(UUID.randomUUID(), "versionCode", "1234")),
-                null);
-        when(propertyValidationService.validatePropertyValue(stringDefinition, "1234")).thenReturn(List.of());
-
-        assertDoesNotThrow(() -> entityValidationService.validateForCreation(entity, template));
-        verify(propertyValidationService).validatePropertyValue(stringDefinition, "1234");
-    }
-
-    private Entity entity(
-            String templateIdentifier,
-            String identifier,
-            String name,
-            List<Property> properties,
-            List<Relation> relations) {
-        return new Entity(UUID.randomUUID(), templateIdentifier, name, identifier, properties, relations);
-    }
+  private Entity entity(String templateIdentifier, String identifier, String name,
+      List<Property> properties, List<Relation> relations) {
+    return new Entity(UUID.randomUUID(), templateIdentifier, name, identifier, properties,
+        relations);
+  }
 }
